--- a/ui/styles/Home.module.css
+++ b/ui/styles/Home.module.css
@@ -28,10 +28,10 @@
 	background-image: url("../images/title.png");
 	background-repeat: no-repeat;
 	position: absolute;
-	width: calc(1.41 * 400px);
-	height: calc(1.41 * 220px);
-	left: calc(1.41 * 480px);
-	top: calc(1.41 * 75px);
+	width: 400px;
+	height: 220px;
+	left: 480px;
+	top: 75px;
 }
 
 .kiri {
@@ -1817,6 +1817,12 @@
 
 @media only screen and (min-width: 1900px) {
 
+.title {
+	width: calc(1.41 * 400px);
+	height: calc(1.41 * 220px);
+	left: calc(1.41 * 480px);
+	top: calc(1.41 * 75px);
+}
 
 }
 
